--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
         <p>Zach Evetts</p>
         <a class="mobile-link" href="#top">Back to top</a>
         <div class="footer-link">
-        <a href="#top">Home</a>
-        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
         <a href="#skills">Skills</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#top">Home</a>
         </div>
       </footer>
 
